--- a/src/styles/profil.css
+++ b/src/styles/profil.css
@@ -6,11 +6,12 @@
 }
 
 .profilPicture{
-    padding: 1rem;
     border-radius: 100%;
-    width: 10rem;
-    height: 10rem;
+    width:15rem;
+    height:15rem;
     margin:auto;
+    padding: 1rem;
+    object-fit: none;
 }
 
 .userName{
@@ -28,10 +29,11 @@
 .profilContainer{
     display: flex;
     flex-direction: column;
-    height:600px;
     width: fit-content;
     margin: auto;
-    overflow-y: auto;
+    padding: 1rem;
+    margin-top: 4rem;
+   
 }
 
 .preferenceSpan{
@@ -42,49 +44,62 @@
 .close{
     font-size: .6rem;
 }
+
+.bgAccordion{
+    background-color: rgba(226, 226, 226, 0.438);
+}
+
+
 }
 
 @media(max-width:768px){
-    .profilCard{
-        width: 100%;
-        height: fit-content;
-    }
     
-    .profilPicture{
-        padding: 1rem;
-        border-radius: 100%;
-        width: 10rem;
-        height: 10rem;
-        margin:auto;
-    }
+.profilCard{
+    width: 30rem;
+    height: fit-content;
+}
+
+.profilPicture{
+    border-radius: 100%;
+    width:15rem;
+    height:15rem;
+    margin:auto;
+    padding: 1rem;
     
-    .userName{
-        width: fit-content;
-        margin: auto;
-        margin-bottom: 1em; 
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .userName span{
-        margin: auto;
-    }
-    
-    .profilContainer{
-        display: flex;
-        flex-direction: column;
-        height:600px;
-        width: 95%;
-        margin: auto;
-        overflow-y: auto;
-    }
-    
-    .preferenceSpan{
-        margin-bottom: 2rem;
-        font-size: 1.1rem;;
-    }
-    
-    .close{
-        font-size: .6rem;
-    }
+}
+
+.userName{
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 1em; 
+    display: flex;
+    flex-direction: column;
+}
+
+.userName span{
+    margin: auto;
+}
+
+.profilContainer{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    margin: auto;
+    padding: 1rem;
+    margin-top: 4rem;
+   
+}
+
+.preferenceSpan{
+    margin-bottom: 2rem;
+    font-size: 1.1rem;;
+}
+
+.close{
+    font-size: .6rem;
+}
+
+.bgAccordion{
+    background-color: rgba(226, 226, 226, 0.438);
+}
 }
