--- a/src/styles/profil.css
+++ b/src/styles/profil.css
@@ -48,7 +48,10 @@
 .bgAccordion{
     background-color: rgba(226, 226, 226, 0.438);
 }
-
+.buttons{
+    margin: auto;
+    width: fit-content;
+}
 
 }
 
@@ -65,6 +68,7 @@
     height:15rem;
     margin:auto;
     padding: 1rem;
+    object-fit: none;
     
 }
 
