--- a/src/styles/profil.css
+++ b/src/styles/profil.css
@@ -1,4 +1,9 @@
 @media (min-width: 768px){
+    body{
+        margin-top: 2rem;
+        margin-bottom: 3rem;
+        height:fit-content;
+    }
 
 .profilCard{
     width: 30rem;
@@ -32,7 +37,6 @@
     width: fit-content;
     margin: auto;
     padding: 1rem;
-    margin-top: 4rem;
    
 }
 
