--- a/src/styles/hello.css
+++ b/src/styles/hello.css
@@ -1,3 +1,24 @@
-body{
- background-color: rgb(33,37,41);
+@media (min-width: 768px) { 
+
+    body{
+    background-color: rgb(33,37,41);
+    }
+
+    .welcomeCarousel{
+        width: 50%;
+        height: fit-content;
+        margin: 1rem auto;
+    }
+}
+
+@media (max-width: 768px) { 
+    body{
+        background-color: rgb(33,37,41);
+       }
+       
+       .welcomeCarousel{
+           width: 100%;
+           height: fit-content;
+           margin: 3rem auto;
+       }
 }
