fixed colors for login

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,9 @@
+:root {
+   --highlight-color: rgb(245, 138, 7);
+   --bg-color: rgb(33,37,41);
+   --card-color: rgba(0, 0, 0, 0.234);
+ }
+
 body{
    height:fit-content;
    margin:auto;
