--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -39,7 +39,7 @@
         font-size: 20px;
         padding: 5px;
         color: grey;
-        border-bottom: 5px solid rgb(188, 195, 202);
+        border-bottom: 5px solid var(--highlight-color);
         display: inline-block;
         width: 100%;
         position: fixed;
